# Aufgabe-3

./: README.md  calculation.py  main.py  my_classes.py  my_functions.py  test.py
Aufgabe 3/: calculation.py  main.py  my_classes.py  pyproject.toml  test.py
Aufgabe 3/SoSe-Software-Engeneering-2025/: README.md  leistungstest.py  pyproject.toml  testing-git.txt
Aufgabe 3/SoSe-Software-Engeneering-2025/Aufgabe-3/: main.py
Aufgabe 3/SoSe-Software-Engeneering-2025/Aufgabe-3/my_package/: __init__.py  my_functions.py
Aufgabe 3/webserver/: data.json  main.py  pyproject.toml
