[project]
name = "Aufgabe-3"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marven Otto", email = "om4326@mci4me.at"},
]
dependencies = ["requests>=2.32.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
